--- a/facebook.html
+++ b/facebook.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="imagens/tela-facebook.jpg" alt="Facebook">
-    <a href="https://www.facebook.com/CursosEmVideo/" target="_blank"></a>
+    <a href="https://www.facebook.com/CursosEmVideo/" target="_blank">ACESSE</a>
 </body>
 </html>
