--- a/github.html
+++ b/github.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="Github">
-    <a href="https://github.com/gustavoguanabara" target="_blank">ACESSE</a>
+    <img src="imagens/imagem-github.jpg" alt="Github">
+    <a href="https://github.com/daniel-junior" target="_blank">ACESSE</a>
 </body>
 </html>
