correçoes na pagina

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <h2 class="conteudo-principal-escrito-subtitulo">Desenvolvedor Web</h2>
                 <button class="conteudo-principal-escrito-botao"> <a href="https://github.com/daniel-junior/" target="_blank">Acesse</a></button>
             </div>
+            <img class="conteudo-principal-imagem" src="imagens/imagem-logo-github.jpg" alt="imagem-github">
         </section>
         <section class="conteudo-secundario">
             <h3 class="conteudo-secundario-titulo">Steve Jobs</h3>
