--- a/sobre.html
+++ b/sobre.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="estilos/style.css">
-    <title>DJ Developers</title>
+    <link rel="stylesheet" href="estilo.css">
+    <title>Sobre</title>
 </head>
 <body>
     <div class="parent">
     <div class="sidebar">
         <div class="sidebar-pos">
+
         <div class="img-sidebar">
             <img src="foto-logo.gif" alt="foto-logo">
         </div><!--img-->
@@ -21,20 +21,24 @@
             <a class="selected" href="contatos.html">contatos</a>
         </div><!--menu-->
         </div><!--sidebar-pos-->
+
     </div><!--sidebar-->
     <div class="content">
+
         <section class="descricao">
-            <h2>Daniel<span>Junior</span></h2>
-            <h3>Desenvolvedor Web</h3>
-            <p>Design não é apenas o que parece e o que se sente. Design é como funciona.</p>
-            <p>Steve Jobs</p>
+            <h3>Sobre</h3>
+            <p>Daniel Junior é estudante de Tecnologia e Desenvolvedor Web.</p>
+
             <div class="icons-social">
                 <img src="logo-instagram.jpg" alt="logo-instagram">
                 <a href="https://www.instagram.com/danielalbuquerque147/" target="_blank">Instagram</a>
                 <img src="logo-github.jpg" alt="logo-github">
                 <a href="https://github.com/daniel-junior" target="_blank">github</a>
             </div>
+
         </section>
+        
+
     </div><!--content-->
 </div><!--parent-->
 </body>
