--- a/contatos.html
+++ b/contatos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilo.css">
     <title>Contatos</title>
@@ -14,6 +15,7 @@
         <div class="sidebar-pos">
 
         <div class="img-sidebar">
+            <img src="imagens/foto-logo.gif" alt="foto-logo">
         </div><!--img-->
         <div class="menu">
             <a class="selected" href="index.html">home</a>
@@ -29,6 +31,12 @@
             <h3>Contatos</h3>
             <p>E-MAIL</p>
             <p>contato@danieljunior.dev.br</p>
+            <div class="icons-social">
+                <img src="imagens/logo-instagram.jpg" alt="logo-instagram">
+                <a href="https://www.instagram.com/danielalbuquerque147/" target="_blank">Instagram</a>
+                <img src="imagens/logo-github.jpg" alt="logo-github">
+                <a href="https://github.com/daniel-junior" target="_blank">github</a>
+            </div>
         </section>
         
 
