--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="sidebar">
         <div class="sidebar-pos">
         <div class="img-sidebar">
+            <img src="imagens/foto-logo.gif" alt="foto-logo">
         </div><!--img-->
         <div class="menu">
             <a class="selected" href="index.html">home</a>
@@ -27,6 +28,12 @@
             <h3>Desenvolvedor Web</h3>
             <p>Design não é apenas o que parece e o que se sente. Design é como funciona.</p>
             <p>Steve Jobs</p>
+            <div class="icons-social">
+                <img src="imagens/logo-instagram.jpg" alt="logo-instagram">
+                <a href="https://www.instagram.com/danielalbuquerque147/" target="_blank">Instagram</a>
+                <img src="imagens/logo-github.jpg" alt="logo-github">
+                <a href="https://github.com/daniel-junior" target="_blank">github</a>
+            </div>
         </section>
     </div><!--content-->
 </div><!--parent-->
