--- a/sobre.html
+++ b/sobre.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilo.css">
     <title>Sobre</title>
@@ -14,7 +15,7 @@
         <div class="sidebar-pos">
 
         <div class="img-sidebar">
-            <img src="foto-logo.gif" alt="foto-logo">
+            <img src="imagens/foto-logo.gif" alt="foto-logo">
         </div><!--img-->
         <div class="menu">
             <a class="selected" href="index.html">home</a>
@@ -22,24 +23,18 @@
             <a class="selected" href="contatos.html">contatos</a>
         </div><!--menu-->
         </div><!--sidebar-pos-->
-
     </div><!--sidebar-->
     <div class="content">
-
         <section class="descricao">
             <h3>Sobre</h3>
             <p>Daniel Junior é estudante de Tecnologia e Desenvolvedor Web.</p>
-
             <div class="icons-social">
-                <img src="logo-instagram.jpg" alt="logo-instagram">
+                <img src="imagens/logo-instagram.jpg" alt="logo-instagram">
                 <a href="https://www.instagram.com/danielalbuquerque147/" target="_blank">Instagram</a>
-                <img src="logo-github.jpg" alt="logo-github">
+                <img src="imagens/logo-github.jpg" alt="logo-github">
                 <a href="https://github.com/daniel-junior" target="_blank">github</a>
             </div>
-
         </section>
-        
-
     </div><!--content-->
 </div><!--parent-->
 </body>
