atualizaçao de cores nas paginas

--- a/sobre.html
+++ b/sobre.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilo.css">
     <title>Sobre</title>
+    <style>
+        h3 {
+            background-color: gray;
+            padding: 10px;
+            border: 1px solid rgba(0, 0, 0, 0.411);
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
     <div class="parent">
