--- a/contatos.html
+++ b/contatos.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilo.css">
     <title>Contatos</title>
+    <style>
+        h3 {
+            background-color: rgba(128, 128, 128, 0.568);
+            padding: 10px;
+            border: 1px solid rgba(0, 0, 0, 0.411);
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
     <div class="parent">
