nova atualizaçao de logos e pajinas

--- a/contatos.html
+++ b/contatos.html
@@ -5,17 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/contato.ico" type="image/x-icon">
-    <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilos/contato.css">
     <title>Contatos</title>
-    <style>
-        h3 {
-            background-color: rgba(128, 128, 128, 0.568);
-            padding: 10px;
-            border: 1px solid rgba(0, 0, 0, 0.411);
-            border-radius: 10px;
-        }
-    </style>
 </head>
 <body>
     <div class="parent">
