--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <p>Design não é apenas o que parece e o que se sente. Design é como funciona.</p>
             <p>Steve Jobs</p>
             <div class="icons-social">
-                <img src="imagens/logo-instagram.jpg" alt="logo-instagram">
+                <img src="imagens/instagram-logo.png" alt="logo-instagram">
                 <a href="https://www.instagram.com/danielalbuquerque147/" target="_blank">Instagram</a>
-                <img src="imagens/logo-github.jpg" alt="logo-github">
+                <img src="imagens/github-logo.jpg" alt="logo-github">
                 <a href="https://github.com/daniel-junior" target="_blank">github</a>
             </div>
         </section>
