atualizaçao da pagina

--- a/index.html
+++ b/index.html
@@ -9,33 +9,19 @@
     <title>DJ Developers</title>
 </head>
 <body>
-    <div class="parent">
-    <div class="sidebar">
-        <div class="sidebar-pos">
-        <div class="img-sidebar">
-            <img src="imagens/foto-logo.gif" alt="foto-logo">
-        </div><!--img-->
-        <div class="menu">
-            <a class="selected" href="index.html">home</a>
-            <a class="selected" href="sobre.html">sobre</a>
-            <a class="selected" href="contatos.html">contatos</a>
-        </div><!--menu-->
-        </div><!--sidebar-pos-->
-    </div><!--sidebar-->
-    <div class="content">
-        <section class="descricao">
-            <h2>Daniel<span>Junior</span></h2>
-            <h3>Desenvolvedor Web</h3>
-            <p>Design não é apenas o que parece e o que se sente. Design é como funciona.</p>
-            <p>Steve Jobs</p>
-            <div class="icons-social">
-                <img src="imagens/instagram-logo.png" alt="logo-instagram">
-                <a href="https://www.instagram.com/danielalbuquerque147/" target="_blank">Instagram</a>
-                <img src="imagens/github-logo.jpg" alt="logo-github">
-                <a href="https://github.com/daniel-junior" target="_blank">github</a>
-            </div>
-        </section>
-    </div><!--content-->
-</div><!--parent-->
+    <div class="body-content">
+        <div class="b-title">
+          <h1>Daniel<span>Junior</span></h1>
+          <p>Desenvolvedor Web</p>
+          <p>Design não é apenas o que parece e o que se sente. Design é como funciona.</p>
+          <p>Steve Jobs</p>
+          <button>Explore</button>
+          <div class="icons">
+            <a href="https://github.com/daniel-junior" target="_blank"><img src="imagens/github-logo.jpg" alt="logotipo-github"></a>
+            <a href="https://www.instagram.com/danielalbuquerque147/" target="_blank"><img src="imagens/instagram-logo.png" alt="logotipo-instagram"></a>
+          </div>
+        </div>
+      </div>
+    </div>  
 </body>
 </html>
