--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <p>Steve Jobs</p>
           <button>Explore</button>
           <div class="icons">
-            <a href="https://github.com/daniel-junior" target="_blank"><img src="imagens/github-logo.jpg" alt="logotipo-github"></a>
-            <a href="https://www.instagram.com/danielalbuquerque147/" target="_blank"><img src="imagens/instagram-logo.png" alt="logotipo-instagram"></a>
+            <a href="https://github.com/daniel-junior" target="_blank"><img src="imagens/github-mark-white.png" alt="logo-github"></a>
+            <a href="https://www.instagram.com/danielalbuquerque147/" target="_blank"><img src="imagens/instagram-logo.png" alt="logo-instagram"></a>
           </div>
         </div>
       </div>
