atualizacao da pagina

--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
     <link rel="shortcut icon" href="imagens/home.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
     <title>DJ Developers</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-    <div class="body-content">
-        <div class="b-title">
-          <h1>Daniel<span>Junior</span></h1>
-          <p>Desenvolvedor Web</p>
-          <p>Design não é apenas o que parece e o que se sente. Design é como funciona.</p>
-          <p>Steve Jobs</p>
-          <button>Explore</button>
-          <div class="icons">
-            <a href="https://github.com/daniel-junior" target="_blank"><img src="imagens/github-mark-white.png" alt="logo-github"></a>
-            <a href="https://www.instagram.com/danielalbuquerque147/" target="_blank"><img src="imagens/instagram-logo.png" alt="logo-instagram"></a>
-          </div>
-        </div>
+  <header>
+    <h1>Daniel Junior</h1>
+    <p>Desenvolvedor web</p>
+  </header>
+  <div class="wrapper">
+    <div class="container">
+      <div class="content">
+        <i class="fab fa-github"></i>
+        <span class="toolip">Github</span>
       </div>
-    </div>  
+      <div class="content">
+        <i class="fab fa-instagram"></i>
+        <span class="toolip">Instagram</span>
+      </div>
+    </div>
+    </div>
+  </div>       
 </body>
 </html>
