mudanças no plano de funfo

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <div class="wrapper">
     <div class="container">
       <div class="content">
-        <i class="fab fa-github"></i>
+        <a href="https://github.com/daniel-junior" target="_blank"><i class="fab fa-github"></i></a>
         <span class="toolip">Github</span>
       </div>
       <div class="content">
-        <i class="fab fa-instagram"></i>
+        <a href="https://www.instagram.com/danielalbuquerque147/" target="_blank"><i class="fab fa-instagram"></i></a>
         <span class="toolip">Instagram</span>
       </div>
     </div>
