--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redes sociais</title>
+    <title>Rede redes sociais</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <main>
-        <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0">
-                Seu navegador não é compativel com isso.
-            </iframe>
-        </section>
-        <section id="redes-sociais">
-            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
-            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
-            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
-        </section>
-    </main>
+  <div class="wrapper">
+    <div class="container">
+        <div class="content">
+           <a href="https://github.com/daniel-junior" target="_blank"> <i class="fab fa-github"></i>
+            <span class="toolip">Github</span></a>
+        </div>
+    </div>
+    <div class="content">
+        <a href="https://www.instagram.com/albuquerque.web/" target="_blank"><i class="fab fa-instagram"></i>
+        <span class="toolip">Instagram</span></a>
+    </div>
+</div>
+</div>
+</div>
+  </div>
 </body>
 </html>
