--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
+
+  <header id="cabecalho">
+    <h1>site novo</h1>
+  </header>
+
   <div class="wrapper">
     <div class="container">
         <div class="content">
