modificaçoes no fundo e titulo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rede redes sociais</title>
+    <title>Daniel junior</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
@@ -11,6 +11,7 @@
 
   <header id="cabecalho">
     <h1>Daniel junior</h1>
+    <p>danieljunior.dev.br</p>
   </header>
 
   <div class="wrapper">
