Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </div>
     </div>
     <div class="content">
-        <a href="https://www.instagram.com/albuquerque.web/" target="_blank"><i class="fab fa-instagram"></i>
-        <span class="toolip">Instagram</span></a>
+        <a href="#" target="_blank"><i class="link"></i>
+        <span class="toolip">link vazio</span></a>
     </div>
 </div>
 </div>
